--- a/mania_simple_hitcount/index.html
+++ b/mania_simple_hitcount/index.html
@@ -17,12 +17,12 @@
         <div id="section_3">
             <div id="hitcount_box">
                 <div id="textBox">
-                    <div id="textH300g">MA</div>
-                    <div id="textH300">PR</div>
-                    <div id="textH200">GR</div>
-                    <div id="textH100">GD</div>
-                    <div id="textH50">BD</div>
-                    <div id="textMiss">MS</div>
+                    <div id="textH300g">320</div>
+                    <div id="textH300">300</div>
+                    <div id="textH200">200</div>
+                    <div id="textH100">100</div>
+                    <div id="textH50">50</div>
+                    <div id="textMiss">0</div>
                     <div id="textUr">UR</div>
                 </div>
                 <div id="countBox">
