--- a/mania_ingame/index.html
+++ b/mania_ingame/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/style_hitcount.css">
     <script src="deps/reconnecting-websocket.min.js"></script>
     <script src="deps/smooth.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 </head>
 
 <body>
@@ -45,6 +46,76 @@
                 <div id="tick27"></div>
                 <div id="tick28"></div>
                 <div id="tick29"></div>
+                <div id="tick30"></div>
+                <div id="tick31"></div>
+                <div id="tick32"></div>
+                <div id="tick33"></div>
+                <div id="tick34"></div>
+                <div id="tick35"></div>
+                <div id="tick36"></div>
+                <div id="tick37"></div>
+                <div id="tick38"></div>
+                <div id="tick39"></div>
+                <div id="tick40"></div>
+                <div id="tick41"></div>
+                <div id="tick42"></div>
+                <div id="tick43"></div>
+                <div id="tick44"></div>
+                <div id="tick45"></div>
+                <div id="tick46"></div>
+                <div id="tick47"></div>
+                <div id="tick48"></div>
+                <div id="tick49"></div>
+                <div id="tick50"></div>
+                <div id="tick51"></div>
+                <div id="tick52"></div>
+                <div id="tick53"></div>
+                <div id="tick54"></div>
+                <div id="tick55"></div>
+                <div id="tick56"></div>
+                <div id="tick57"></div>
+                <div id="tick58"></div>
+                <div id="tick59"></div>
+                <div id="tick60"></div>
+                <div id="tick61"></div>
+                <div id="tick62"></div>
+                <div id="tick63"></div>
+                <div id="tick64"></div>
+                <div id="tick65"></div>
+                <div id="tick66"></div>
+                <div id="tick67"></div>
+                <div id="tick68"></div>
+                <div id="tick69"></div>
+                <div id="tick70"></div>
+                <div id="tick71"></div>
+                <div id="tick72"></div>
+                <div id="tick73"></div>
+                <div id="tick74"></div>
+                <div id="tick75"></div>
+                <div id="tick76"></div>
+                <div id="tick77"></div>
+                <div id="tick78"></div>
+                <div id="tick79"></div>
+                <div id="tick80"></div>
+                <div id="tick81"></div>
+                <div id="tick82"></div>
+                <div id="tick83"></div>
+                <div id="tick84"></div>
+                <div id="tick85"></div>
+                <div id="tick86"></div>
+                <div id="tick87"></div>
+                <div id="tick88"></div>
+                <div id="tick89"></div>
+                <div id="tick90"></div>
+                <div id="tick91"></div>
+                <div id="tick92"></div>
+                <div id="tick93"></div>
+                <div id="tick94"></div>
+                <div id="tick95"></div>
+                <div id="tick96"></div>
+                <div id="tick97"></div>
+                <div id="tick98"></div>
+                <div id="tick99"></div>
                 <div id="center"></div>
                 <div id="early">Early</div><div id="late">Late</div>
             </div>
